Fix a bug in removing intersecting edge, etc.
- Fix a bug in removing intersecting edge in VBOPmBlocks
- support multiple offset polygons inside a polygon.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,12 @@
 ToDo:
-4. どのエッジがfront/sideか、チェックする関数がおかしい。
+1. どのエッジがfront/sideか、チェックする関数がおかしい。
      mid pointから道路までの距離をチェックしている。
-6. 道路の生成パラメータを変えて、道路を再作成してみる。
+2. 道路の生成パラメータを変えて、道路を再作成してみる。
+3. ブロックが生成されないケースがある。デバッグしろ！
+
 7. ここまでで、一旦20個のシナリオを作成する。
-8. VBORenderManagerは、shapeのタイプも含めて、異なるキーとしてオブジェクトを保存すべき。現状は、それがないため、オブジェクト名を必要に応じて変えて保存している。
+
+9. VBORenderManagerは、shapeのタイプも含めて、異なるキーとしてオブジェクトを保存すべき。現状は、それがないため、オブジェクト名を必要に応じて変えて保存している。
 10. Polygonのcompute insetを改善したい。できるだけ、CGALを使わないようにしたい。
 11. BUildingのshapeファイルを読み込んだら、buildingをparcelの中に入れること！
 12. parcelの中で、building footprint以外の場所に、少し、木を植える。
@@ -15,3 +18,4 @@ ToDo:
 18. 道路生成ロジックの改善。川の両側に道路を作成し、その間を橋とする。
 19. Block生成ロジックの改善。target areaの境界に疑似道路を作り、より多くのblockが作成されるようにする。
 20. Polygon3Dの関数で、constとか&を使えるところは、使うこと！
+21. waterを、シェーダ川で高さを変えるようにすべき。
